--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ MarkupSafe==2.1.5
 numpy==1.26.4
 openpyxl==3.1.2
 pandas==2.2.1
+pandasql==0.7.3
 psycopg2-binary==2.9.9
 python-dotenv==1.0.1
 redis==5.0.4
